syntax = "proto3";

package dev.dgvalerio.ufal;

service Random {
  rpc PingPong(PingRequest) returns (PingResponse) {};
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

